# Aftercare-py

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
configs/: prometheus.yml
data/: eval_cases.jsonl
reports/: api_latency.json  model_context_latency.json
scripts/: benchmark_latency.py  bootstrap_demo.py  build_eval_dataset.py
src/ac_py/: __init__.py  config.py  main.py  mcp_server.py  runtime.py
src/ac_py/agent/: __init__.py  evidence.py  memory.py  prompt.py  routing.py  state.py  workflow.py
src/ac_py/api/: __init__.py  routes.py  schemas.py
src/ac_py/cache/: __init__.py  store.py
src/ac_py/db/: __init__.py  base.py  models.py  repositories.py
src/ac_py/domain/: __init__.py  enums.py  schemas.py
src/ac_py/evaluation/: __init__.py  cli.py  dataset.py  metrics.py  runner.py
src/ac_py/llm/: __init__.py  client.py
src/ac_py/observability/: __init__.py  metrics.py
src/ac_py/rag/: __init__.py  chunking.py  indexer.py  search.py
src/ac_py/tasks/: __init__.py  celery_app.py  jobs.py
src/ac_py/tools/: __init__.py  builtin.py  executor.py  registry.py
tests/: __init__.py  fakes.py  test_chunking.py  test_docstrings.py  test_llm_client.py  test_metrics.py  test_prompt.py  test_routing_tools.py  test_workflow.py
