[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ac-py"
version = "0.1.0"
description = "有状态、可恢复、可评测的电商售后工单智能诊断系统"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "celery[redis]>=5.4,<6",
  "elasticsearch[async]>=8.17,<9",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "langchain-core>=0.3,<2",
  "langfuse>=3,<5",
  "langgraph>=1,<2",
  "langgraph-checkpoint-redis>=0.2,<1",
  "mcp>=1.9,<3",
  "orjson>=3.10,<4",
  "prometheus-client>=0.21,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "python-multipart>=0.0.20,<1",
  "redis>=5.2,<7",
  "sqlalchemy[asyncio]>=2.0,<3",
  "asyncmy>=0.2,<1",
  "sse-starlette>=2.2,<4",
  "tiktoken>=0.8,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
documents = ["docling>=2.20,<3"]
dev = [
  "aiosqlite>=0.20,<1",
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[project.scripts]
ac-api = "ac_py.main:run"
ac-eval = "ac_py.evaluation.cli:main"
ac-mcp = "ac_py.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ac_py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests"]
